[package]
name = "pong"
version = "0.1.0"
authors = ["shreychowdhary <shrey.chowdhary1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.56", features = ["serde-serialize"]  }
js-sys = "0.3.33"
wasm-bindgen-futures = "0.4.6"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
console_error_panic_hook = { version = "0.1.1", optional = true }
nalgebra = "0.27"

[dependencies.web-sys]
version = "0.3.4"
features = [
 'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'WebGlUniformLocation',
  'Performance',
  'EventTarget',
  'VisibilityState',
  'KeyboardEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
